@@ -2,6 +2,8 @@
 - Added Ribbon renderer and module to render nice trails after moving particles
 - Added physics module to produce velocity and angle values from sum of applied forces (given mass is 1)
 - Civilized Error Reporting will now prevent app from crashing and closing
+- Random Range Module now supports input slots
+- System Input Module now exposes particle seed for randomness operations
 
 [1.0.6]
 - Support for bezier curve logic in Beam Drawable. Adds left and right tangents.
